--- a/home.html
+++ b/home.html
@@ -507,7 +507,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </section>
 <!-- /TESTIMONIALS --> 
   
-<section class="section-spacing text-center faqs-section"> 
+<section class="section-spacing text-center"> 
     <div class="container"> 
         <p class="p-custom font inconsolata text-black">F.A.Q</p>
         <h2 class="h2-custom">Preguntas Frecuentes</h2>
