--- a/home.html
+++ b/home.html
@@ -293,7 +293,7 @@
                         <a href="#" class="btn btn-primary mt-3">EXPLORA ESTE UNIVERSO</a>
                     </div>
                     <div class="universe-image">
-                        <img src="images/Universo-verde.png" alt="Universo Verde">
+                        <img src="Images/Universo-Verde.png" alt="Universo Verde">
                     </div>
                 </div>
             </div>
@@ -312,7 +312,7 @@
                         <a href="#" class="btn btn-primary mt-3">EXPLORA ESTE UNIVERSO</a>
                     </div>
                     <div class="universe-image">
-                        <img src="images/Universo-Gourmet.png" alt="Universo Gourmet">
+                        <img src="Images/Universo-Gourmet.png" alt="Universo Gourmet">
                     </div>
                 </div>
             </div>
@@ -443,7 +443,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="col-md-4">
   <div class="card p-4 border-0 shadow-sm h-100 text-center">
     <!-- Imagen del cliente -->
-    <img src="images/Testimonio-Icono-01-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
+    <img src="Images/Testimonio-Icono-01-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
 
     <!-- Nombre -->
     <h5 class="mb-1">MAMÁ DE UMA</h5>
@@ -465,7 +465,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="col-md-4">
   <div class="card p-4 border-0 shadow-sm h-100 text-center">
     <!-- Imagen del cliente -->
-    <img src="images/Testimonio-Icono-02-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
+    <img src="Images/Testimonio-Icono-02-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
 
     <!-- Nombre -->
     <h5 class="mb-1">PAPÁ DE LEO</h5>
@@ -486,7 +486,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <div class="col-md-4">
   <div class="card p-4 border-0 shadow-sm h-100 text-center">
     <!-- Imagen del cliente -->
-    <img src="images/Testimonio-Icono-03-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
+    <img src="Images/Testimonio-Icono-03-8.png" alt="Foto cliente" class="rounded-circle mx-auto mb-3" style="width: 80px; height: 80px; object-fit: cover;">
 
     <!-- Nombre -->
     <h5 class="mb-1">MAMÁ DE MICA</h5>
