--- a/plan.html
+++ b/plan.html
@@ -214,7 +214,7 @@ misiones cada mes.</h2>
                         <a href="#" class="btn btn-primary mt-3">EXPLORA ESTE UNIVERSO</a>
                     </div>
                     <div class="universe-image">
-                        <img src="Images/Universo-verde.png" alt="Universo Verde">
+                        <img src="Images/Universo-Verde.png" alt="Universo Verde">
                     </div>
                 </div>
             </div>
