--- a/plan.html
+++ b/plan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Plantilla Visible - Belluccia 3</title>
 
-    <!-- Tipografía desde Google Fonts -->
+    <!-- Tipografía desde Google Fontss -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Barriecito&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
@@ -436,6 +436,7 @@ document.addEventListener('DOMContentLoaded', function() {
 </section>
 <!-- /CONTACT FORM -->
   
+
 
 <!-- FOOTER: Pie de página -->
 <footer class="site-footer py-5">
